ingress-delivery-3.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-together-ingress
  labels:
    name: delivery-together-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /native
        backend:
          service:
            name: true-native-service
            port: 
              number: 80
      - pathType: Prefix
        path: /credit-cards
        backend:
          service:
            name: delivery-together-card-service
            port: 
              number: 80
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: delivery-together-user-service
            port: 
              number: 80
