ingress.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-together-ingress
  labels:
    name: delivery-together-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: delivery-together-bff-service
            port: 
              number: 80
      - pathType: Prefix
        path: /scores
        backend:
          service:
            name: delivery-together-score-service
            port: 
              number: 80
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: delivery-together-user-service
            port: 
              number: 80
      - pathType: Prefix
        path: /routes
        backend:
          service:
            name: delivery-together-route-service
            port: 
              number: 80
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: delivery-together-post-service
            port: 
              number: 80
      - pathType: Prefix
        path: /offers
        backend:
          service:
            name: delivery-together-offer-service
            port: 
              number: 80
